scrollbar fixed

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html{
   overflow-x: hidden;
 }
 body{
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .carousel-item img{
